# eyedid-cpp-sample

./: CMakeLists.txt  DUMMY.txt  LICENSE  README.md  camera_thread.cc  camera_thread.h  drawables.h  main.cpp  priority_mutex.h  simple_signal.h  tracker_manager.cc  tracker_manager.h  view.h
opencv/: checksum.txt
